[gd_scene load_steps=4 format=2]

[ext_resource path="res://Goon.gd" type="Script" id=1]
[ext_resource path="res://assets/goon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Area2D" type="Area2D"]
physics_interpolation_mode = 2
collision_mask = 0

[node name="Goon" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.52117, 1.68 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="Goon" method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="." to="Goon" method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="." to="Goon" method="_on_Area2D_body_entered"]
